Add java io to request open modules (#482)